generate/testdata/errors/InvalidSchema.go
package errors

const _ = `# @genqlient
	query InvalidSchema { f }
`
